# Bandits-Experiment

./: .gitignore  README.md  TODOS.md  pyproject.toml  requirement.txt  test.bat
results/: advanced_ope_summary.json  bts_all_advanced_ope_summary.json  bts_men_advanced_ope_summary.json  bts_women_advanced_ope_summary.json  ope_summary.json  random_all_advanced_ope_summary.json  random_men_advanced_ope_summary.json  random_women_advanced_ope_summary.json
src/: bandit_policies.py  config.py  config.toml  data_utils.py  pybandit_experiment.py  requirements.txt  simulation.py
src/obp/dataset/: real.py
src/obp/ope/: meta.py
src/pybandits/: model.py  requirements.txt
